--- a/archives/toutiao-search/2024-04-13.md
+++ b/archives/toutiao-search/2024-04-13.md
@@ -1,42 +1,64 @@
 # 2024-04-13
 
-共 290 条
+共 305 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Apr 13 2024 22:00:32 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Apr 13 2024 23:00:34 GMT+0800 (China Standard Time) -->
+1. [秦皇岛一船只侧翻已致12死6失联](https://so.toutiao.com/search?keyword=秦皇岛一船只侧翻已致12死6失联)
 1. [伊朗专家：对以报复行动将分三阶段](https://so.toutiao.com/search?keyword=伊朗专家：对以报复行动将分三阶段)
-1. [重庆成立联合调查组进驻燃气企业](https://so.toutiao.com/search?keyword=重庆成立联合调查组进驻燃气企业)
 1. [炮制“秦朗丢作业”丢掉了什么](https://so.toutiao.com/search?keyword=炮制“秦朗丢作业”丢掉了什么)
+1. [重庆成立联合调查组进驻燃气企业](https://so.toutiao.com/search?keyword=重庆成立联合调查组进驻燃气企业)
 1. [伊朗军事顾问：以色列处于恐慌状态](https://so.toutiao.com/search?keyword=伊朗军事顾问：以色列处于恐慌状态)
-1. [保时捷车主撞车后恐吓对方被行拘](https://so.toutiao.com/search?keyword=保时捷车主撞车后恐吓对方被行拘)
-1. [妻子连续3年逼脑梗丈夫走路锻炼](https://so.toutiao.com/search?keyword=妻子连续3年逼脑梗丈夫走路锻炼)
-1. [男子确诊狂犬病身亡：几年前被狗咬过](https://so.toutiao.com/search?keyword=男子确诊狂犬病身亡：几年前被狗咬过)
+1. [四川一养猪场发生气体中毒事故致7死](https://so.toutiao.com/search?keyword=四川一养猪场发生气体中毒事故致7死)
+1. [重庆建立燃气投诉举报绿色通道](https://so.toutiao.com/search?keyword=重庆建立燃气投诉举报绿色通道)
+1. [以色列：伊朗将承受冲突升级的后果](https://so.toutiao.com/search?keyword=以色列：伊朗将承受冲突升级的后果)
+1. [赵乐际会见金正恩](https://so.toutiao.com/search?keyword=赵乐际会见金正恩)
+1. [多名重庆网友晒燃气费账单](https://so.toutiao.com/search?keyword=多名重庆网友晒燃气费账单)
+1. [白宫认为伊朗袭以色列威胁真实可信](https://so.toutiao.com/search?keyword=白宫认为伊朗袭以色列威胁真实可信)
+1. [官方辟谣河南息县5岁小孩被偷](https://so.toutiao.com/search?keyword=官方辟谣河南息县5岁小孩被偷)
 1. [重庆：燃气收费有误的将督促企业退还](https://so.toutiao.com/search?keyword=重庆：燃气收费有误的将督促企业退还)
 1. [河南原则上不再保留省直科级事业单位](https://so.toutiao.com/search?keyword=河南原则上不再保留省直科级事业单位)
-1. [赵乐际会见金正恩](https://so.toutiao.com/search?keyword=赵乐际会见金正恩)
-1. [南昌暴雨](https://so.toutiao.com/search?keyword=南昌暴雨)
-1. [官方辟谣河南息县5岁小孩被偷](https://so.toutiao.com/search?keyword=官方辟谣河南息县5岁小孩被偷)
-1. [多名重庆网友晒燃气费账单](https://so.toutiao.com/search?keyword=多名重庆网友晒燃气费账单)
-1. [美媒：伊朗正在调动“军事资产”](https://so.toutiao.com/search?keyword=美媒：伊朗正在调动“军事资产”)
-1. [五月天捐出泉州演唱会全部票房](https://so.toutiao.com/search?keyword=五月天捐出泉州演唱会全部票房)
-1. [西安狂风暴雨雷声滚滚](https://so.toutiao.com/search?keyword=西安狂风暴雨雷声滚滚)
-1. [伊朗打击计划或不含以色列民用设施](https://so.toutiao.com/search?keyword=伊朗打击计划或不含以色列民用设施)
-1. [央视评5岁女孩和英歌队互动](https://so.toutiao.com/search?keyword=央视评5岁女孩和英歌队互动)
-1. [医院回应40余名护士被集体辞退](https://so.toutiao.com/search?keyword=医院回应40余名护士被集体辞退)
-1. [以色列处于高度戒备状态](https://so.toutiao.com/search?keyword=以色列处于高度戒备状态)
+1. [网红猫一杯微博账号被关闭](https://so.toutiao.com/search?keyword=网红猫一杯微博账号被关闭)
+1. [重庆已完成20多万户燃气用户筛查](https://so.toutiao.com/search?keyword=重庆已完成20多万户燃气用户筛查)
+1. [保时捷车主撞车后恐吓对方被行拘](https://so.toutiao.com/search?keyword=保时捷车主撞车后恐吓对方被行拘)
+1. [妻子连续3年逼脑梗丈夫走路锻炼](https://so.toutiao.com/search?keyword=妻子连续3年逼脑梗丈夫走路锻炼)
+1. [伊朗要开始报复袭击以色列了吗](https://so.toutiao.com/search?keyword=伊朗要开始报复袭击以色列了吗)
+1. [美媒称伊朗准备了多达100枚导弹](https://so.toutiao.com/search?keyword=美媒称伊朗准备了多达100枚导弹)
 1. [杨立新干弟弟：出轨视频是为了施压](https://so.toutiao.com/search?keyword=杨立新干弟弟：出轨视频是为了施压)
 1. [网红猫一杯一夜掉粉近30万](https://so.toutiao.com/search?keyword=网红猫一杯一夜掉粉近30万)
-1. [伊朗要开始报复袭击以色列了吗](https://so.toutiao.com/search?keyword=伊朗要开始报复袭击以色列了吗)
-1. [网红杨立新遇害前曾承认婚内出轨怀孕](https://so.toutiao.com/search?keyword=网红杨立新遇害前曾承认婚内出轨怀孕)
-1. [为何说把菲“坐滩”军舰拖走不靠谱](https://so.toutiao.com/search?keyword=为何说把菲“坐滩”军舰拖走不靠谱)
-1. [俄媒：以色列想要把美国拖入战争](https://so.toutiao.com/search?keyword=俄媒：以色列想要把美国拖入战争)
-1. [德舆论：朔尔茨此次访华不同寻常](https://so.toutiao.com/search?keyword=德舆论：朔尔茨此次访华不同寻常)
-1. [首饰金价一夜下降10元每克](https://so.toutiao.com/search?keyword=首饰金价一夜下降10元每克)
-1. [胡锡进谈悉尼行凶案：独狼防不胜防](https://so.toutiao.com/search?keyword=胡锡进谈悉尼行凶案：独狼防不胜防)
-1. [网红猫一杯微博账号被关闭](https://so.toutiao.com/search?keyword=网红猫一杯微博账号被关闭)
-1. [狂犬病能潜伏十几年并无依据](https://so.toutiao.com/search?keyword=狂犬病能潜伏十几年并无依据)
+1. [男子确诊狂犬病身亡：几年前被狗咬过](https://so.toutiao.com/search?keyword=男子确诊狂犬病身亡：几年前被狗咬过)
+1. [评论员：马英九访陆给台青很大触动](https://so.toutiao.com/search?keyword=评论员：马英九访陆给台青很大触动)
+1. [以色列处于高度戒备状态](https://so.toutiao.com/search?keyword=以色列处于高度戒备状态)
 1. [亲历悉尼行凶案中国公民：惊魂未定](https://so.toutiao.com/search?keyword=亲历悉尼行凶案中国公民：惊魂未定)
+1. [南昌暴雨](https://so.toutiao.com/search?keyword=南昌暴雨)
+1. [俄媒：以色列想要把美国拖入战争](https://so.toutiao.com/search?keyword=俄媒：以色列想要把美国拖入战争)
+1. [狂犬病能潜伏十几年并无依据](https://so.toutiao.com/search?keyword=狂犬病能潜伏十几年并无依据)
 1. [83岁“义丐”离世 20年收养8个弃婴](https://so.toutiao.com/search?keyword=83岁“义丐”离世+20年收养8个弃婴)
+1. [江西破获养老诈骗案 上万人被骗](https://so.toutiao.com/search?keyword=江西破获养老诈骗案+上万人被骗)
+1. [14岁女生遭教练强奸？警方重启调查](https://so.toutiao.com/search?keyword=14岁女生遭教练强奸？警方重启调查)
+1. [学生挥拳反击闹事醉汉被刑拘](https://so.toutiao.com/search?keyword=学生挥拳反击闹事醉汉被刑拘)
+1. [美媒：拜登对中国就是雷声大雨点小](https://so.toutiao.com/search?keyword=美媒：拜登对中国就是雷声大雨点小)
+1. [拜登警告伊朗不要袭击以色列](https://so.toutiao.com/search?keyword=拜登警告伊朗不要袭击以色列)
+1. [网红杨立新遇害前曾承认婚内出轨怀孕](https://so.toutiao.com/search?keyword=网红杨立新遇害前曾承认婚内出轨怀孕)
+1. [大马航司回应旅客丢东西只搜中国人](https://so.toutiao.com/search?keyword=大马航司回应旅客丢东西只搜中国人)
+1. [美媒：伊朗正在调动“军事资产”](https://so.toutiao.com/search?keyword=美媒：伊朗正在调动“军事资产”)
+1. [西安狂风暴雨雷声滚滚](https://so.toutiao.com/search?keyword=西安狂风暴雨雷声滚滚)
+1. [中方的制裁能打疼美军火公司吗](https://so.toutiao.com/search?keyword=中方的制裁能打疼美军火公司吗)
+1. [伊朗打击计划或不含以色列民用设施](https://so.toutiao.com/search?keyword=伊朗打击计划或不含以色列民用设施)
+1. [访陆的台青：看到一个有温度的大陆](https://so.toutiao.com/search?keyword=访陆的台青：看到一个有温度的大陆)
+1. [央视评5岁女孩和英歌队互动](https://so.toutiao.com/search?keyword=央视评5岁女孩和英歌队互动)
+1. [郭敬明上海开妆造店 均消1500元](https://so.toutiao.com/search?keyword=郭敬明上海开妆造店+均消1500元)
+1. [杨怡不介意老公拍亲热戏](https://so.toutiao.com/search?keyword=杨怡不介意老公拍亲热戏)
+1. [记者：今天国安踢得很放松](https://so.toutiao.com/search?keyword=记者：今天国安踢得很放松)
+1. [首饰金价一夜下降10元每克](https://so.toutiao.com/search?keyword=首饰金价一夜下降10元每克)
+1. [伊朗扣押一艘与以色列有关的货船](https://so.toutiao.com/search?keyword=伊朗扣押一艘与以色列有关的货船)
+1. [媒体：台青访陆收获的不仅仅是震撼](https://so.toutiao.com/search?keyword=媒体：台青访陆收获的不仅仅是震撼)
+1. [央音回应退休教师举报系主任](https://so.toutiao.com/search?keyword=央音回应退休教师举报系主任)
+1. [五月天捐出泉州演唱会全部票房](https://so.toutiao.com/search?keyword=五月天捐出泉州演唱会全部票房)
+1. [医院回应40余名护士被集体辞退](https://so.toutiao.com/search?keyword=医院回应40余名护士被集体辞退)
+1. [为何说把菲“坐滩”军舰拖走不靠谱](https://so.toutiao.com/search?keyword=为何说把菲“坐滩”军舰拖走不靠谱)
+1. [德舆论：朔尔茨此次访华不同寻常](https://so.toutiao.com/search?keyword=德舆论：朔尔茨此次访华不同寻常)
+1. [胡锡进谈悉尼行凶案：独狼防不胜防](https://so.toutiao.com/search?keyword=胡锡进谈悉尼行凶案：独狼防不胜防)
 1. [司机开车闹口角 不满被骂选择撞人](https://so.toutiao.com/search?keyword=司机开车闹口角+不满被骂选择撞人)
 1. [小米汽车：SU7不建议贴隔热膜](https://so.toutiao.com/search?keyword=小米汽车：SU7不建议贴隔热膜)
 1. [捡废品老人将饭店整箱30斤生蚝搬走](https://so.toutiao.com/search?keyword=捡废品老人将饭店整箱30斤生蚝搬走)
@@ -46,19 +68,14 @@
 1. [退休副部级干部晒生活照](https://so.toutiao.com/search?keyword=退休副部级干部晒生活照)
 1. [专家分析伊以局势下美方动作](https://so.toutiao.com/search?keyword=专家分析伊以局势下美方动作)
 1. [网红杨立新遇害前刚收嫌疑人为徒](https://so.toutiao.com/search?keyword=网红杨立新遇害前刚收嫌疑人为徒)
-1. [14岁女生遭教练强奸？警方重启调查](https://so.toutiao.com/search?keyword=14岁女生遭教练强奸？警方重启调查)
 1. [河南许昌为接住泼天富贵霸气喊话](https://so.toutiao.com/search?keyword=河南许昌为接住泼天富贵霸气喊话)
-1. [美媒称伊朗准备了多达100枚导弹](https://so.toutiao.com/search?keyword=美媒称伊朗准备了多达100枚导弹)
 1. [保安揍服打人男子算防卫过当吗](https://so.toutiao.com/search?keyword=保安揍服打人男子算防卫过当吗)
 1. [曾志伟设慈善晚宴庆祝71岁生日](https://so.toutiao.com/search?keyword=曾志伟设慈善晚宴庆祝71岁生日)
 1. [澳大利亚发生持刀行凶事件 已致7死](https://so.toutiao.com/search?keyword=澳大利亚发生持刀行凶事件+已致7死)
-1. [学生挥拳反击闹事醉汉被刑拘](https://so.toutiao.com/search?keyword=学生挥拳反击闹事醉汉被刑拘)
 1. [江西师大虐猫学生已被开除学籍](https://so.toutiao.com/search?keyword=江西师大虐猫学生已被开除学籍)
 1. [至少50枚火箭弹从黎巴嫩射向以色列](https://so.toutiao.com/search?keyword=至少50枚火箭弹从黎巴嫩射向以色列)
 1. [曝以军在加沙袭击3名巴勒斯坦记者](https://so.toutiao.com/search?keyword=曝以军在加沙袭击3名巴勒斯坦记者)
 1. [以军发言人称以色列处于高度戒备状态](https://so.toutiao.com/search?keyword=以军发言人称以色列处于高度戒备状态)
-1. [中方的制裁能打疼美军火公司吗](https://so.toutiao.com/search?keyword=中方的制裁能打疼美军火公司吗)
-1. [伊朗扣押一艘与以色列有关的货船](https://so.toutiao.com/search?keyword=伊朗扣押一艘与以色列有关的货船)
 1. [“青花瓷孔雀”开屏像千里江山图](https://so.toutiao.com/search?keyword=“青花瓷孔雀”开屏像千里江山图)
 1. [北京1死16伤燃气爆炸事故报告公布](https://so.toutiao.com/search?keyword=北京1死16伤燃气爆炸事故报告公布)
 1. [俄公布“绝密导弹”试射画面](https://so.toutiao.com/search?keyword=俄公布“绝密导弹”试射画面)
@@ -77,7 +94,6 @@
 1. [比特币一夜暴跌 超29万人爆仓](https://so.toutiao.com/search?keyword=比特币一夜暴跌+超29万人爆仓)
 1. [乌称有部队弃守阵地致其他乌军被围](https://so.toutiao.com/search?keyword=乌称有部队弃守阵地致其他乌军被围)
 1. [王传福参观比亚迪超大车展展台](https://so.toutiao.com/search?keyword=王传福参观比亚迪超大车展展台)
-1. [拜登警告伊朗不要袭击以色列](https://so.toutiao.com/search?keyword=拜登警告伊朗不要袭击以色列)
 1. [名嘴批民进党：台湾人也想去看长城](https://so.toutiao.com/search?keyword=名嘴批民进党：台湾人也想去看长城)
 1. [乌军总司令：东部前线局势明显紧张](https://so.toutiao.com/search?keyword=乌军总司令：东部前线局势明显紧张)
 1. [保时捷女司机撞车后砸门吓哭小孩](https://so.toutiao.com/search?keyword=保时捷女司机撞车后砸门吓哭小孩)
@@ -133,7 +149,6 @@
 1. [俄称西方应为乌无条件投降做准备](https://so.toutiao.com/search?keyword=俄称西方应为乌无条件投降做准备)
 1. [蔡正元：台军别想靠海峡挡住解放军](https://so.toutiao.com/search?keyword=蔡正元：台军别想靠海峡挡住解放军)
 1. [俄打击乌能源设施 乌打击俄军阵地](https://so.toutiao.com/search?keyword=俄打击乌能源设施+乌打击俄军阵地)
-1. [郭敬明上海开妆造店 均消1500元](https://so.toutiao.com/search?keyword=郭敬明上海开妆造店+均消1500元)
 1. [第三个“国九条”会开启A股牛市吗](https://so.toutiao.com/search?keyword=第三个“国九条”会开启A股牛市吗)
 1. [詹姆斯比赛中上演突破重扣](https://so.toutiao.com/search?keyword=詹姆斯比赛中上演突破重扣)
 1. [各地春耕有妙招](https://so.toutiao.com/search?keyword=各地春耕有妙招)
